# SeamlessM4T

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: main.py  models.py  utils.py
api/services/: __init__.py  base_service.py  model_manager.py  s2st_service.py  s2tt_service.py  t2st_service.py  t2tt_service.py
app/: gradio_app.py
src/: SeamlessM4T-ASR.py  SeamlessM4T-S2ST.py  SeamlessM4T-S2TT.py  SeamlessM4T-T2ST.py  SeamlessM4T-T2TT.py
src/SeamlessM4T.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
